# vissort

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build
include/: App.hpp  DataGenerator.hpp  Element.hpp  GenAscending.hpp  Gui.hpp  IGenerateAlgorithm.hpp  Sorter.hpp
include/core/: Data.hpp  Element.hpp
include/generator/: GenAscending.hpp  GenDescending.hpp  IGenerateAlgorithm.hpp
include/gui/: Gui.hpp
include/sort/: BubbleSort.hpp  ISortAlgorithm.hpp  Sorter.hpp
src/: App.cpp  DataGenerator.cpp  GenAscending.cpp  Gui.cpp  Sorter.cpp  main.cpp
src/core/: App.cpp
src/generator/: DataGenerator.cpp  GenAscending.cpp  GenDescending.cpp
src/gui/: Gui.cpp
src/sort/: BubbleSort.cpp  Sorter.cpp
